[gd_scene load_steps=6 format=3 uid="uid://v570pdai0rsr"]

[ext_resource type="Script" path="res://Tesla.gd" id="1_bsean"]
[ext_resource type="Texture2D" uid="uid://c2tdx17phw4vd" path="res://812b83ec-5b4f-4c14-8252-44a3218371de.png" id="2_lvs28"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5qne"]
size = Vector2(266, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b3ov2"]
size = Vector2(252.5, 78.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2n3aa"]
size = Vector2(237, 69.5)

[node name="Tesla" type="Node2D"]
script = ExtResource("1_bsean")

[node name="Area2D3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
top_level = true
position = Vector2(181, 241)
shape = SubResource("RectangleShape2D_j5qne")

[node name="Sprite2D" type="Sprite2D" parent="Area2D3/CollisionShape2D"]
texture = ExtResource("2_lvs28")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(478.75, 238.875)
shape = SubResource("RectangleShape2D_b3ov2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(763.5, 236.75)
shape = SubResource("RectangleShape2D_2n3aa")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="."]
offset_left = 117.0
offset_top = 101.0
offset_right = 218.0
offset_bottom = 152.0
text = "girar"

[node name="Button2" type="Button" parent="."]
offset_left = 428.0
offset_top = 106.0
offset_right = 529.0
offset_bottom = 157.0
text = "girar"

[node name="Button3" type="Button" parent="."]
offset_left = 711.0
offset_top = 99.0
offset_right = 812.0
offset_bottom = 150.0
text = "girar"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
